cabal-version: 2.2
name:
  hjd
version:
  0.1
synopsis:
  diff hydra jobsets
description:
  Diff the configuration between hydra jobsets. Parses
  the HTML from hydra.
bug-reports:
  https://github.com/chessai/hjd#issues
license:
  MIT
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
copyright:
  copyright 2020 chessai
category:
  Text
build-type:
  Simple

executable hjd
  main-is:
    Main.hs
  build-depends:
    , base
    , containers
    , extra
    , html-parse
    , optparse-applicative
    , patience
    , text
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/inputs.git
